# freexster

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.superpowers/sdd/: task-5-report.md
docs/architecture/: foundation-boundaries.md  simplex-runner-poc.md
docs/superpowers/plans/: 2026-06-27-freexster-v1-foundation.md  2026-06-30-simplex-local-runner-poc.md
docs/superpowers/specs/: 2026-06-27-freexster-design.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: freexster-status.toml  simplex-runner.toml
src-tauri/src/: lib.rs  main.rs  simplex_runner.rs
src-tauri/tests/: simplex_runner.rs
src/adapters/: freexsterClient.ts  mockFreexsterClient.test.ts  mockFreexsterClient.ts  nativeStatus.test.ts  nativeStatus.ts  simplexRunner.test.ts  simplexRunner.ts
src/app/: FreexsterApp.test.tsx  FreexsterApp.tsx  useFreexsterData.test.tsx  useFreexsterData.ts
src/components/: AppShell.test.tsx  AppShell.tsx  ChannelsPanel.tsx  Homepage.test.tsx  Homepage.tsx  InboxPanel.tsx  PlaceholderSurface.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Sidebar.tsx  ThreadPanel.tsx  TrustPanel.tsx
src/domain/: fixtures.ts  selectors.test.ts  selectors.ts  types.ts
