[package]
name = "freexster"
version = "0.1.0"
description = "Freexster desktop shell"
authors = ["General Magick Industries"]
edition = "2021"

[lib]
name = "freexster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
